[metadata]
name = cheetah_orm
version = 1.0.0a
description = An object relational mapper written in pure Python.
author = Cybermals
author_email = cybermals@googlegroups.com
url = https://github.com/Cybermals/Cheetah-cheetah_orm
license = MIT
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Database

[options]
packages = cheetah_orm
install_requires = 
    passlib
include_package_data = True
