[metadata]
name = cheetah_orm
version = 1.0.0b1
description = An object relational mapper written in pure Python.
author = Cybermals
author_email = cybermals@googlegroups.com
url = https://github.com/Cybermals/Cheetah-ORM
license = MIT
classifiers = 
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Database

[options]
packages = cheetah_orm
install_requires = 
    passlib
include_package_data = True
